# MailTest

./: .travis.yml  CMakeLists.txt  README.md  getAPI.cpp  getAPI.h  getRequest.h  main.cpp  startAssembly.sh  testsGetAPI.cpp
